--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
   <!-- Footer -->
   <footer>
     Love Clematis Money Tracker Web Application?&nbsp;
-    <a href="https://github.com/grauds/money.tracker.ui" target="_blank" rel="noopener"> Give our repo a
+    <a href="https://github.com/grauds/money-tracker-ui" target="_blank" rel="noopener"> Give our repo a
       star.
       <div class="github-star-badge">
         <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -19,7 +19,7 @@
         Star
       </div>
     </a>
-    <a href="https://github.com/grauds/money.tracker.ui" target="_blank" rel="noopener">
+    <a href="https://github.com/grauds/money-tracker-ui" target="_blank" rel="noopener">
       <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
         <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z" fill="#1976d2"/>
         <path d="M0 0h24v24H0z" fill="none"/>
