--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,30 @@
-<p>header works!</p>
+<!-- Toolbar -->
+<div class="navbar navbar-expand-lg navbar-dark bg-light bg-brand">
+  <img width="120" alt="Clematis Logo" src="../../assets/clematis.png" class="navbar-logo" />
+
+  <a class="navbar-brand" href="#">{{title}}</a>
+
+  <button *ngIf="isLoggedIn()"
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarContent"
+          aria-controls="navbarContent"
+          aria-expanded="false"
+          (click)="isCollapsed = !isCollapsed"
+          [attr.aria-expanded]="!isCollapsed"
+          aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="mr-auto collapse navbar-collapse justify-content-end" [ngbCollapse]="isCollapsed" id="navbarContent">
+
+    <div class="my-2 my-lg-0 float-right" *ngIf="isLoggedIn()">
+      <span class="navbar-brand" style="border-left: 2px solid white;" > {{userInfo()}}</span>
+      <fa-icon class="logout-icon" (click)="logout()" [icon]="faLogout"></fa-icon>
+    </div>
+
+  </div>
+
+
+</div>
