--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+html, body { height: 100%; }
+body {
+  margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
+  background: #ffffff !important;
+}
+
+.table-striped-fixed > tbody > tr:nth-of-type(odd) > tr {
+  background-color: rgba(0,0,0,.05);
+}
