[+] Added organizations and commodities

--- a/src/app/common/widgets/entity-list/entity-list.component.html
+++ b/src/app/common/widgets/entity-list/entity-list.component.html
@@ -50,6 +50,7 @@
     <div class="col-sm-12">
 
       <app-pagination-bar
+        [path]="path"
         [currentPage]="n"
         [itemsPerPage]="limit"
         [total]="total"
@@ -62,6 +63,7 @@
       </div>
 
       <app-pagination-bar
+        [path]="path"
         [currentPage]="n"
         [itemsPerPage]="limit"
         [total]="total"
