[+] Added shared error processing module

--- a/src/app/commodities/expences-list/expense-item-renderer/expense-item-renderer.component.html
+++ b/src/app/commodities/expences-list/expense-item-renderer/expense-item-renderer.component.html
@@ -3,7 +3,7 @@
 
     <div style="padding-top: 5px; padding-bottom: 5px;">
 
-      <div>{{entity.transferDate}}</div>
+      <div>{{ entity.transferDate | date: 'mediumDate'}}</div>
 
     </div>
 
