--- a/src/app/commodities/expences-list/expense-item-renderer/expense-item-renderer.component.html
+++ b/src/app/commodities/expences-list/expense-item-renderer/expense-item-renderer.component.html
@@ -12,7 +12,7 @@
 
     <div style="padding-top: 5px; padding-bottom: 5px;">
 
-      <div>{{entity.commodity}}</div>
+      <div>{{commodity.name}}</div>
 
     </div>
 
