--- a/src/app/common/widgets/entity-element/entity-element.component.html
+++ b/src/app/common/widgets/entity-element/entity-element.component.html
@@ -3,7 +3,7 @@
 
     <div style="padding-top: 5px; padding-bottom: 5px;">
 
-      <div>{{entity.name}}</div>
+      <div><a href="{{entityLink}}">{{entity.name}}</a></div>
 
     </div>
 
