--- a/src/app/common/widgets/entity-list/entity-list.component.html
+++ b/src/app/common/widgets/entity-list/entity-list.component.html
@@ -4,47 +4,50 @@
   </div>
 </div>
 
-<content-loader class="ph-item" *ngIf="loading">
-  <svg:rect x="0" y="0" rx="3" ry="3" width="450" height="10" />
-  <svg:rect x="20" y="20" rx="3" ry="3" width="220" height="10" />
-  <svg:rect x="20" y="40" rx="3" ry="3" width="170" height="10" />
+<app-search [searchText]="search" (changeSearchString)="setSearchString($event)"></app-search>
 
-  <svg:rect x="20" y="60" rx="3" ry="3" width="250" height="10" />
-  <svg:rect x="20" y="80" rx="3" ry="3" width="200" height="10" />
-  <svg:rect x="20" y="100" rx="3" ry="3" width="80" height="10" />
-
-  <svg:rect x="0" y="120" rx="3" ry="3" width="450" height="10" />
-  <svg:rect x="20" y="140" rx="3" ry="3" width="200" height="10" />
-  <svg:rect x="20" y="160" rx="3" ry="3" width="80" height="10" />
-
-  <svg:rect x="20" y="180" rx="3" ry="3" width="250" height="10" />
-  <svg:rect x="20" y="200" rx="3" ry="3" width="200" height="10" />
-  <svg:rect x="20" y="220" rx="3" ry="3" width="80" height="10" />
-
-  <svg:rect x="20" y="240" rx="3" ry="3" width="250" height="10" />
-  <svg:rect x="20" y="260" rx="3" ry="3" width="200" height="10" />
-  <svg:rect x="20" y="280" rx="3" ry="3" width="80" height="10" />
-
-  <svg:rect x="0"  y="300" rx="3" ry="3" width="450" height="10" />
-  <svg:rect x="20" y="320" rx="3" ry="3" width="200" height="10" />
-  <svg:rect x="20" y="340" rx="3" ry="3" width="80" height="10" />
-</content-loader>
+<div class="row">
+  <div class="col-sm-12">
+    <hr class="shr"/>
+  </div>
+</div>
 
 <div *ngIf="!error">
 
-  <span *ngIf="!loading">
-    <h3 *ngIf="total !== undefined && total > 1">There are {{total}} records found</h3>
-    <h3 *ngIf="total === 1">There is 1 record found</h3>
-    <h3 *ngIf="total === 0">No records found</h3>
-    <h4 *ngIf="total === undefined">The total number of records is not known, showing the first page</h4>
-  </span>
+  <content-loader class="ph-item" *ngIf="loading">
+    <svg:rect x="0" y="0" rx="3" ry="3" width="450" height="10" />
+    <svg:rect x="20" y="20" rx="3" ry="3" width="220" height="10" />
+    <svg:rect x="20" y="40" rx="3" ry="3" width="170" height="10" />
 
-  <div class="row">
-    <div class="col-sm-12">
-      <hr class="shr"/>
+    <svg:rect x="20" y="60" rx="3" ry="3" width="250" height="10" />
+    <svg:rect x="20" y="80" rx="3" ry="3" width="200" height="10" />
+    <svg:rect x="20" y="100" rx="3" ry="3" width="80" height="10" />
+
+    <svg:rect x="0" y="120" rx="3" ry="3" width="450" height="10" />
+    <svg:rect x="20" y="140" rx="3" ry="3" width="200" height="10" />
+    <svg:rect x="20" y="160" rx="3" ry="3" width="80" height="10" />
+
+    <svg:rect x="20" y="180" rx="3" ry="3" width="250" height="10" />
+    <svg:rect x="20" y="200" rx="3" ry="3" width="200" height="10" />
+    <svg:rect x="20" y="220" rx="3" ry="3" width="80" height="10" />
+
+    <svg:rect x="20" y="240" rx="3" ry="3" width="250" height="10" />
+    <svg:rect x="20" y="260" rx="3" ry="3" width="200" height="10" />
+    <svg:rect x="20" y="280" rx="3" ry="3" width="80" height="10" />
+
+    <svg:rect x="0"  y="300" rx="3" ry="3" width="450" height="10" />
+    <svg:rect x="20" y="320" rx="3" ry="3" width="200" height="10" />
+    <svg:rect x="20" y="340" rx="3" ry="3" width="80" height="10" />
+  </content-loader>
+
+  <div class="row" *ngIf="!loading">
+    <div class="mb-2 d-flex flex-nowrap px-2" *ngIf="!loading">
+      <h3 *ngIf="total !== undefined && total > 1">There are {{total}} records found</h3>
+      <h3 *ngIf="total === 1">There is 1 record found</h3>
+      <h3 *ngIf="total === 0">No records found</h3>
+      <h4 *ngIf="total === undefined">The total number of records is not known, showing the first page</h4>
     </div>
   </div>
-
 
   <div class="row" *ngIf="!loading">
 
@@ -75,9 +78,37 @@
         (changeCurrentPage)="setCurrentPage($event)"
       ></app-pagination-bar>
 
-      <div *ngFor="let a of entities">
-        <app-entity-element [entity]="a"></app-entity-element>
-      </div>
+       <div *ngIf="!pageLoading">
+         <div *ngFor="let a of entities">
+           <app-entity-element [entity]="a"></app-entity-element>
+         </div>
+       </div>
+
+       <content-loader class="ph-item" *ngIf="pageLoading">
+         <svg:rect x="0" y="0" rx="3" ry="3" width="350" height="10" />
+         <svg:rect x="20" y="20" rx="3" ry="3" width="220" height="10" />
+         <svg:rect x="20" y="40" rx="3" ry="3" width="170" height="10" />
+
+         <svg:rect x="20" y="60" rx="3" ry="3" width="250" height="10" />
+         <svg:rect x="20" y="80" rx="3" ry="3" width="200" height="10" />
+         <svg:rect x="20" y="100" rx="3" ry="3" width="80" height="10" />
+
+         <svg:rect x="0" y="120" rx="3" ry="3" width="350" height="10" />
+         <svg:rect x="20" y="140" rx="3" ry="3" width="200" height="10" />
+         <svg:rect x="20" y="160" rx="3" ry="3" width="80" height="10" />
+
+         <svg:rect x="20" y="180" rx="3" ry="3" width="250" height="10" />
+         <svg:rect x="20" y="200" rx="3" ry="3" width="200" height="10" />
+         <svg:rect x="20" y="220" rx="3" ry="3" width="80" height="10" />
+
+         <svg:rect x="20" y="240" rx="3" ry="3" width="250" height="10" />
+         <svg:rect x="20" y="260" rx="3" ry="3" width="200" height="10" />
+         <svg:rect x="20" y="280" rx="3" ry="3" width="80" height="10" />
+
+         <svg:rect x="0"  y="300" rx="3" ry="3" width="350" height="10" />
+         <svg:rect x="20" y="320" rx="3" ry="3" width="200" height="10" />
+         <svg:rect x="20" y="340" rx="3" ry="3" width="80" height="10" />
+       </content-loader>
 
       <app-pagination-bar
         [path]="path"
