--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,10 +19,21 @@
 
   <div *ngIf="isLoggedIn()" class="mr-auto collapse navbar-collapse justify-content-end" [ngbCollapse]="isCollapsed" id="navbarContent">
 
+
     <ul ngbNav #nav="ngbNav"
         class="nav nav-pills float-right "
         [(activeId)]="currentRoute"
         style="border-left: 2px solid white; padding: 10px 10px 10px 30px">
+
+      <form class="row row-cols-sm-auto">
+        <div class="col-12">
+          <div class="input-group">
+            <input class="form-control" placeholder="yyyy-mm-dd"
+                   name="dp" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker">
+            <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
+          </div>
+        </div>
+      </form>
 
       <li ngbDropdown class="nav-item">
         <a href (click)="false" class="nav-link" ngbDropdownToggle>
