[+] Added commodity groups and their properties

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -45,8 +45,8 @@
             <a ngbNavLink routerLink="/commodities">Commodities</a>
           </li>
 
-          <li ngbNavItem="/commoditiesGroups">
-            <a ngbNavLink routerLink="/commoditiesGroups">Commodities Groups</a>
+          <li ngbNavItem="/commodityGroups">
+            <a ngbNavLink routerLink="/commodityGroups">Commodities Groups</a>
           </li>
 
           <li ngbNavItem="/expenses">
