--- a/src/app/commodities/commodity-group/commodity-group.component.html
+++ b/src/app/commodities/commodity-group/commodity-group.component.html
@@ -4,7 +4,7 @@
       <div>
         <h2 style='margin: 10px'></h2>
         <h2>
-           {{entity ? entity.name : 'Not loaded'}}
+          {{entity ? entity.name : 'Not loaded'}}
         </h2>
         <h6>
           <a href="{{parentLink}}">{{parent?.name}}</a>
@@ -17,10 +17,10 @@
           </ng-template>
         </ngb-rating>
         <hr>
-        <pre>Rate: <b>{{currentRate}}</b></pre>
+
       </div>
       <div>
-        Price: {{defaultPrice}} for {{defaultUnit}}
+
       </div>
       <div style='max-height: 350px; margin: 10px; overflow: auto'>
         {{entity ? entity.description : 'Lorem ipsum dolor sit amet, consectetur adipiscing elit.\n' +
@@ -45,35 +45,11 @@
       </div>
     </div>
     <div class='col-6'>
-      <ngb-carousel *ngIf="images">
-        <ng-template ngbSlide>
-          <div class="picsum-img-wrapper">
-            <img [src]="images[0]" alt="Random first slide">
-          </div>
-          <div class="carousel-caption">
-            <h3>First slide label</h3>
-            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-          </div>
-        </ng-template>
-        <ng-template ngbSlide>
-          <div class="picsum-img-wrapper">
-            <img [src]="images[1]" alt="Random second slide">
-          </div>
-          <div class="carousel-caption">
-            <h3>Second slide label</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          </div>
-        </ng-template>
-        <ng-template ngbSlide>
-          <div class="picsum-img-wrapper">
-            <img [src]="images[2]" alt="Random third slide">
-          </div>
-          <div class="carousel-caption">
-            <h3>Third slide label</h3>
-            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-          </div>
-        </ng-template>
-      </ngb-carousel>
+      <div *ngIf="childGroups.length > 0">
+        <div *ngFor="let a of childGroups">
+          <app-entity-element [entity]="a"></app-entity-element>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
 </div>
