[+] Added summed totals for a commodity group

--- a/src/app/commodities/commodity-group/commodity-group.component.html
+++ b/src/app/commodities/commodity-group/commodity-group.component.html
@@ -23,6 +23,10 @@
         {{entity ? entity.description : ''}}
       </div>
 
+      <div>
+        Total: {{totalSum}} RUB
+      </div>
+
     </div>
     <div class='col-6'>
       <div *ngIf="childGroups.length > 0">
