--- a/src/app/commodities/commodity/commodity.component.html
+++ b/src/app/commodities/commodity/commodity.component.html
@@ -1,6 +1,6 @@
 
   <div class='row'>
-    <div class='col-6 back-area jumbotron'>
+    <div class='col-9 back-area jumbotron'>
       <div>
         <h2 style='margin: 10px'></h2>
         <h2>
@@ -16,48 +16,28 @@
             <span class="star" [class.filled]="fill === 10" [class.bad]="index < 3">&#9733;</span>
           </ng-template>
         </ngb-rating>
-        <hr>
-        <pre>Rate: <b>{{currentRate}}</b></pre>
+      </div>
+    </div>
+    <div class="col-3">
+      <div>
+        Average Price: {{defaultPrice}} {{defaultMoneyType?.code}} / {{defaultUnit}}
       </div>
       <div>
-        Price: {{defaultPrice}} for {{defaultUnit}}
+        Quantity: {{totalQty}} {{defaultUnit}}
       </div>
       <div>
-        Total: {{totalSum}} RUB
+        Cost: {{totalSum}} {{defaultMoneyType?.code}}
       </div>
       <div style='max-height: 350px; margin: 10px; overflow: auto'>
         {{entity ? entity.description : ''}}
       </div>
     </div>
-    <div class='col-6'>
-      <ngb-carousel *ngIf="images">
-        <ng-template ngbSlide>
-          <div class="picsum-img-wrapper">
-            <img [src]="images[0]" alt="Random first slide">
-          </div>
-          <div class="carousel-caption">
-            <h3>First slide label</h3>
-            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-          </div>
-        </ng-template>
-        <ng-template ngbSlide>
-          <div class="picsum-img-wrapper">
-            <img [src]="images[1]" alt="Random second slide">
-          </div>
-          <div class="carousel-caption">
-            <h3>Second slide label</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          </div>
-        </ng-template>
-        <ng-template ngbSlide>
-          <div class="picsum-img-wrapper">
-            <img [src]="images[2]" alt="Random third slide">
-          </div>
-          <div class="carousel-caption">
-            <h3>Third slide label</h3>
-            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-          </div>
-        </ng-template>
-      </ngb-carousel>
-    </div>
 </div>
+
+  <div class='row'>
+    <div class='col-12'>
+      <plotly-plot [data]="graph.data" [layout]="graph.layout"
+                   [style]="{width: '100%', height: '500px'}">
+      </plotly-plot>
+    </div>
+  </div>
