--- a/src/app/commodities/expences-list/expenses-list.component.html
+++ b/src/app/commodities/expences-list/expenses-list.component.html
@@ -4,6 +4,22 @@
   </div>
 </div>
 
+<form class="row row-cols-sm-auto">
+  <div class="col-12">
+    <div class="input-group">
+      <input class="form-control" placeholder="yyyy-mm-dd"
+             name="dp" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker">
+      <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
+    </div>
+  </div>
+</form>
+
+<div class="row">
+  <div class="col-sm-12">
+    <hr class="shr"/>
+  </div>
+</div>
+
 <content-loader class="ph-item" *ngIf="loading">
   <svg:rect x="0" y="0" rx="3" ry="3" width="450" height="10" />
   <svg:rect x="20" y="20" rx="3" ry="3" width="220" height="10" />
@@ -38,12 +54,6 @@
     <h3 *ngIf="total === 0">No records found</h3>
     <h4 *ngIf="total === undefined">The total number of records is not known, showing the first page</h4>
   </span>
-
-  <div class="row">
-    <div class="col-sm-12">
-      <hr class="shr"/>
-    </div>
-  </div>
 
   <div class="row" *ngIf="!loading">
 
