[+] Added accounts totals [+] Refactoring in total statistics

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,1 +1,3 @@
-
+<div *ngFor="let a of accountsBalances">
+  <app-account-balance-item [balance]="a" *ngIf="a.balance != 0"></app-account-balance-item>
+</div>
