--- a/src/app/commodities/commodity/commodity.component.html
+++ b/src/app/commodities/commodity/commodity.component.html
@@ -20,7 +20,10 @@
     </div>
     <div class="col-3">
       <div>
-        Average Price: {{defaultPrice}} {{defaultMoneyType?.code}} / {{defaultUnit}}
+        Default Price: {{defaultPrice}} {{defaultMoneyType?.code}} / {{defaultUnit}}
+      </div>
+      <div>
+        Average Price: {{averagePrice | number}} {{defaultMoneyType?.code}} / {{defaultUnit}}
       </div>
       <div>
         Quantity: {{totalQty}} {{defaultUnit}}
@@ -37,7 +40,7 @@
   <div class='row'>
     <div class='col-12'>
       <plotly-plot [data]="graph.data" [layout]="graph.layout"
-                   [style]="{width: '100%', height: '500px'}">
+                   [style]="{minWidth: '800px', width: '100%', height: '500px'}">
       </plotly-plot>
     </div>
   </div>
