--- a/apps/money-tracker-ui/src/app/header/header.component.html
+++ b/apps/money-tracker-ui/src/app/header/header.component.html
@@ -34,14 +34,17 @@
           <a ngbNavLink routerLink="/commodityGroups">Commodities Groups</a>
         </li>
 
-        <li ngbNavItem="/expenses">
-          <a ngbNavLink routerLink="/expenses">Expenses</a>
-        </li>
-
         <li ngbNavItem="/organizations">
           <a ngbNavLink routerLink="/organizations">Organizations</a>
         </li>
 
+        <li ngbNavItem="/organizationGroups">
+          <a ngbNavLink routerLink="/organizationGroups">Organizations Groups</a>
+        </li>
+
+        <li ngbNavItem="/expenses">
+          <a ngbNavLink routerLink="/expenses">Expenses</a>
+        </li>
 
       </ul>
 
