--- a/apps/money-tracker-ui/src/app/app.component.html
+++ b/apps/money-tracker-ui/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header [title]="title"></app-header>
 
-<div class="content" role="main">
+<div class="card-container" role="main">
 
   <router-outlet></router-outlet>
 
