--- a/apps/money-tracker-ui/src/app/commodities/commodity-group/commodity-group.component.html
+++ b/apps/money-tracker-ui/src/app/commodities/commodity-group/commodity-group.component.html
@@ -1,43 +1,62 @@
+  <content-loader class="ph-item" *ngIf="loading">
+    <svg:rect x="0" y="0" rx="3" ry="3" width="450" height="10" />
+    <svg:rect x="20" y="20" rx="3" ry="3" width="220" height="10" />
+    <svg:rect x="20" y="40" rx="3" ry="3" width="170" height="10" />
 
-  <div class='row'>
-    <div class='col-4 back-area jumbotron'>
-      <div>
-        <h2 style='margin: 10px'></h2>
-        <h2>
-          {{entity ? entity.name : 'Not loaded'}}
-        </h2>
-        <h6>
-          <a href="{{parentLink}}">{{parent?.name}}</a>
-        </h6>
-      </div>
-      <div style='max-height: 350px; margin: 10px; overflow: auto'>
-        {{entity ? entity.description : ''}}
-      </div>
-      <div>
-        Total: {{totalSum}} RUB
+    <svg:rect x="20" y="60" rx="3" ry="3" width="250" height="10" />
+    <svg:rect x="20" y="80" rx="3" ry="3" width="200" height="10" />
+    <svg:rect x="20" y="100" rx="3" ry="3" width="80" height="10" />
+
+    <svg:rect x="0" y="120" rx="3" ry="3" width="450" height="10" />
+    <svg:rect x="20" y="140" rx="3" ry="3" width="200" height="10" />
+    <svg:rect x="20" y="160" rx="3" ry="3" width="80" height="10" />
+
+    <svg:rect x="20" y="180" rx="3" ry="3" width="250" height="10" />
+    <svg:rect x="20" y="200" rx="3" ry="3" width="200" height="10" />
+    <svg:rect x="20" y="220" rx="3" ry="3" width="80" height="10" />
+
+    <svg:rect x="20" y="240" rx="3" ry="3" width="250" height="10" />
+    <svg:rect x="20" y="260" rx="3" ry="3" width="200" height="10" />
+    <svg:rect x="20" y="280" rx="3" ry="3" width="80" height="10" />
+
+    <svg:rect x="0"  y="300" rx="3" ry="3" width="450" height="10" />
+    <svg:rect x="20" y="320" rx="3" ry="3" width="200" height="10" />
+    <svg:rect x="20" y="340" rx="3" ry="3" width="80" height="10" />
+  </content-loader>
+
+  <div class="row" *ngIf="!loading">
+    <div class='row'>
+      <div class='col-4 back-area'>
+
+        <div class="jumbotron">
+          <h2 style='margin: 10px'></h2>
+          <h2>
+            {{entity ? entity.name : ''}}
+          </h2>
+          <h6>
+            <a href="{{parentLink}}">{{parent?.name}}</a>
+          </h6>
+          <span style='max-height: 350px; margin: 10px; overflow: auto'>
+            {{entity ? entity.description : ''}}
+          </span>
+          <div>
+            Total: {{totalSum}} RUB
+          </div>
+        </div>
+
       </div>
 
-    </div>
-    <div class='col-4'>
-      <div *ngIf="childGroups.length > 0">
+      <div *ngIf="childGroups.length > 0" class='col-4'>
         <div *ngFor="let a of childGroups">
           <app-entity-element [entity]="a"></app-entity-element>
         </div>
       </div>
-    </div>
-    <div class='col-4'>
-      <div *ngIf="childCommodities.length > 0">
+
+      <div *ngIf="childCommodities.length > 0" class='col-4'>
         <div *ngFor="let a of childCommodities">
           <app-entity-element [entity]="a"></app-entity-element>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="row">
 
-    <div class="col-12">
-      <ya-map [center]="[55.751952, 37.600739]" [zoom]="12">
-        <ya-placemark [geometry]="[55.751952, 37.600739]"></ya-placemark>
-      </ya-map>
     </div>
   </div>
