--- a/apps/money-tracker-ui/src/app/commodities/commodity/commodity.component.html
+++ b/apps/money-tracker-ui/src/app/commodities/commodity/commodity.component.html
@@ -1,6 +1,6 @@
 
   <div class='row'>
-    <div class='col-9 back-area jumbotron'>
+    <div class='col-8 back-area'>
       <div>
         <h2 style='margin: 10px'></h2>
         <h2>
@@ -18,7 +18,7 @@
         </ngb-rating>
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-4 jumbotron">
       <div>
         Default Price: {{defaultPrice}} {{defaultMoneyType?.code}} / {{defaultUnit}}
       </div>
