[+] Migrated to Material UI [+] Replaced pagination component

--- a/apps/money-tracker-ui/src/app/common/widgets/page-size/page-size.component.html
+++ b/apps/money-tracker-ui/src/app/common/widgets/page-size/page-size.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="pageCount() > 0">
+<div *ngIf="pageCount() > 0">
   <div class="mb-2 d-flex flex-nowrap px-2">
     <label
       id="paginationInputLabel"
