--- a/apps/money-tracker-ui/src/app/header/header.component.css
+++ b/apps/money-tracker-ui/src/app/header/header.component.css
@@ -10,10 +10,8 @@
 
 .navbar-brand {
   float: left;
-  height: 50px;
-  padding: 15px 15px 40px 40px;
+  padding: 15px;
   font-size: 36px;
-  line-height: 20px;
 }
 
 .navbar-menu {
@@ -25,6 +23,7 @@
 
 .navbar-logo {
   float: left;
+  margin-top: 40px;
   margin-left: 20px;
   padding-right: 20px;
 }
@@ -37,6 +36,9 @@
   vertical-align: bottom;
 }
 
+.header-spacer {
+  flex: 1 1 auto;
+}
 
 .toolbar {
   position: absolute;
@@ -71,4 +73,22 @@
 
 .bg-brand {
   background-color: rgba(51, 153, 204, 0.5) !important;
+}
+
+.sidenav-container {
+  height: 100%;
+}
+
+.sidenav {
+  width: 200px;
+}
+
+.sidenav .mat-toolbar {
+  background: inherit;
+}
+
+.mat-toolbar.mat-primary {
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
