--- a/apps/money-tracker-ui/src/app/header/header.component.html
+++ b/apps/money-tracker-ui/src/app/header/header.component.html
@@ -1,64 +1,47 @@
 <!-- Toolbar -->
-<div class="navbar navbar-expand-lg navbar-dark bg-light bg-brand">
-  <img width="120" alt="Clematis Logo" src="../../assets/clematis.png" class="navbar-logo" />
-
-  <a class="navbar-brand" href="#">{{title}}</a>
-
-  <div *ngIf="isLoggedIn()">
-    <button class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarContent"
-            aria-controls="navbarContent"
-            aria-expanded="false"
-            (click)="isCollapsed = !isCollapsed"
-            [attr.aria-expanded]="!isCollapsed"
-            aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="mr-auto collapse navbar-collapse justify-content-end" [ngbCollapse]="isCollapsed" id="navbarContent">
-
-
-      <ul ngbNav #nav="ngbNav"
-          class="nav nav-pills float-right "
-          [(activeId)]="currentRoute"
-          style="border-left: 2px solid white; padding: 10px 10px 10px 30px">
-
-
-        <li ngbNavItem="/commodities">
-          <a ngbNavLink routerLink="/commodities">Commodities</a>
-        </li>
-
-        <li ngbNavItem="/commodityGroups">
-          <a ngbNavLink routerLink="/commodityGroups">Commodities Groups</a>
-        </li>
-
-        <li ngbNavItem="/organizations">
-          <a ngbNavLink routerLink="/organizations">Organizations</a>
-        </li>
-
-        <li ngbNavItem="/organizationGroups">
-          <a ngbNavLink routerLink="/organizationGroups">Organizations Groups</a>
-        </li>
-
-        <li ngbNavItem="/expenses">
-          <a ngbNavLink routerLink="/expenses">Expenses</a>
-        </li>
-
-      </ul>
-
-
-      <div class="my-2 my-lg-0 float-right">
-      <span class="navbar-brand"   style="border-left: 2px solid white; font-size: 20px;">
-        {{userInfo()}} <fa-icon class="logout-icon" (click)="logout()" [icon]="faLogout"></fa-icon>
-      </span>
-
+<mat-sidenav-container class="sidenav-container">
+  <mat-sidenav #drawer class="sidenav" fixedInViewport
+               [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+               [mode]="(isHandset$ | async) ? 'over' : 'side'"
+               [opened]="(isHandset$ | async) === false">
+    <mat-toolbar>{{title}}</mat-toolbar>
+    <mat-nav-list>
+      <a mat-list-item
+         routerLinkActive="/commodities"
+         routerLink="/commodities">Commodities</a>
+      <a mat-list-item
+         routerLinkActive="/commodityGroups"
+         routerLink="/commodityGroups">Commodities Groups</a>
+      <a mat-list-item
+         routerLinkActive="/organizations"
+         routerLink="/organizations">Organizations</a>
+      <a mat-list-item
+         routerLinkActive="/organizationGroups"
+         routerLink="/organizationGroups">Organizations Groups</a>
+      <a mat-list-item
+         routerLinkActive="/expenses"
+         routerLink="/expenses">Expenses</a>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <mat-toolbar color="primary" class="mat-elevation-z6">
+      <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="drawer.toggle()"
+        *ngIf="isHandset$ | async">
+           <mat-icon fontIcon="menu"></mat-icon>
+      </button>
+      <span *ngIf="isHandset$ | async">{{title}}</span>
+      <span class="header-spacer"></span>
+      <div>
+        <span class="navbar-brand" style="border-left: 2px solid white; font-size: 20px;">
+          {{userInfo()}}
+          <fa-icon class="logout-icon" (click)="logout()" [icon]="faLogout"></fa-icon>
+        </span>
       </div>
-
-    </div>
-  </div>
-
-
-
-</div>
+    </mat-toolbar>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
