--- a/apps/money-tracker-ui/src/styles.css
+++ b/apps/money-tracker-ui/src/styles.css
@@ -15,3 +15,6 @@ body {
   background-color: #e9ecef;
   border-radius: .3rem;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
