[+] Keycloak auth made a little better

--- a/apps/money-tracker-ui/src/app/organizations/organization/organization.component.html
+++ b/apps/money-tracker-ui/src/app/organizations/organization/organization.component.html
@@ -1,5 +1,5 @@
-<div class='row'>
-  <div class='col-9 back-area jumbotron'>
+<div>
+  <div class='back-area jumbotron'>
     <div>
       <h2 style='margin: 10px'></h2>
       <h2>
@@ -12,8 +12,5 @@
     <div>
 
     </div>
-  </div>
-  <div class="col-3">
-
   </div>
 </div>
