--- a/apps/money-tracker-ui/src/app/header/header.component.html
+++ b/apps/money-tracker-ui/src/app/header/header.component.html
@@ -42,6 +42,6 @@
         </span>
       </div>
     </mat-toolbar>
-    <router-outlet></router-outlet>
+    <app-workspace></app-workspace>
   </mat-sidenav-content>
 </mat-sidenav-container>
