[+] Keycloak auth made a little better

--- a/apps/money-tracker-ui/src/app/app.component.html
+++ b/apps/money-tracker-ui/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-header [title]="title" [username]="username"></app-header>
+<app-header *ngIf="userProfile" [title]="title" [userProfile]="userProfile" [isLoggedIn]="isLoggedIn"></app-header>
+
+<app-header *ngIf="!userProfile" [title]="title" [isLoggedIn]="isLoggedIn"></app-header>
