--- a/apps/money-tracker-ui/src/app/commodities/commodity-group/commodity-group.component.html
+++ b/apps/money-tracker-ui/src/app/commodities/commodity-group/commodity-group.component.html
@@ -34,7 +34,7 @@
             {{entity ? entity.name : ''}}
           </h2>
           <h6>
-            <a href="{{parentLink}}">{{parent?.name}}</a>
+            <a routerLink="{{parentLink}}">{{parent?.name}}</a>
           </h6>
           <span style='max-height: 350px; margin: 10px; overflow: auto'>
             {{entity ? entity.description : ''}}
