--- a/apps/money-tracker-ui/src/app/organizations/organization/organization.component.html
+++ b/apps/money-tracker-ui/src/app/organizations/organization/organization.component.html
@@ -6,7 +6,7 @@
         {{entity ? entity.name : 'Not loaded'}}
       </h2>
       <h6>
-        <a href="{{parentLink}}">{{parent?.name}}</a>
+        <a routerLink="{{parentLink}}">{{parent?.name}}</a>
       </h6>
     </div>
     <div>
