--- a/apps/money-tracker-ui/src/app/pages/expences-list/expense-item-renderer/expense-item-renderer.component.html
+++ b/apps/money-tracker-ui/src/app/pages/expences-list/expense-item-renderer/expense-item-renderer.component.html
@@ -12,7 +12,7 @@
 
     <div style="padding-top: 5px; padding-bottom: 5px;">
 
-     <div><a href="{{commodity}}">{{commodity ? commodityName : ''}}</a></div>
+     <div><a routerLink="{{commodity}}">{{commodity ? commodityName : ''}}</a></div>
 
     </div>
 
@@ -39,7 +39,7 @@
 
     <div style="padding-top: 5px; padding-bottom: 5px;">
 
-      <div><a href="{{organization}}">{{organization ? organizationName : ''}}</a></div>
+      <div><a routerLink="{{organization}}">{{organization ? organizationName : ''}}</a></div>
 
     </div>
 
