--- a/apps/money-tracker-ui/src/app/organizations/organization-group/organization-group.component.html
+++ b/apps/money-tracker-ui/src/app/organizations/organization-group/organization-group.component.html
@@ -7,7 +7,7 @@
         {{entity ? entity.name : ''}}
       </h2>
       <h6>
-        <a href="{{parentLink}}">{{parent?.name}}</a>
+        <a routerLink="{{parentLink}}">{{parent?.name}}</a>
       </h6>
     </div>
     <div style='max-height: 350px; margin: 10px; overflow: auto'>
