--- a/libs/shared-components/src/lib/components/breadcrumbs/breadcrumbs.component.html
+++ b/libs/shared-components/src/lib/components/breadcrumbs/breadcrumbs.component.html
@@ -1,15 +1,16 @@
 <div class="breadcrumbs">
 
-  <div class="path-divider"></div>
+  <div class="path-item"><mat-icon fontIcon="home"></mat-icon></div>
 
   <div *ngFor="let item of path" class="path-item">
+
+    <div class="path-divider">&gt;</div>
 
     <a *ngIf="item.getSelfLinkHref()" [routerLink]="parseResourceUrlToAppUrl(item)" class="active-ctrl">
       {{ item.name }}
     </a>
     <div *ngIf="!item.getSelfLinkHref()">{{ item.name }}</div>
 
-    <div class="path-divider">&gt;</div>
   </div>
 
 </div>
