--- a/libs/shared-components/src/lib/components/breadcrumbs/breadcrumbs.component.sass
+++ b/libs/shared-components/src/lib/components/breadcrumbs/breadcrumbs.component.sass
@@ -1,5 +1,6 @@
 .breadcrumbs
   @apply flex text-gray-400 p-3 pb-0
+  margin-bottom: 5px
 
 .breadcrumbs .path-divider
   @apply ml-2 mr-2 cursor-default
