--- a/apps/money-tracker-ui/src/app/commodities/commodity/commodity.component.html
+++ b/apps/money-tracker-ui/src/app/commodities/commodity/commodity.component.html
@@ -1,14 +1,12 @@
 <app-breadcrumbs *ngIf="entity" [path]="path"></app-breadcrumbs>
-<div class='row' *ngIf="entity">
-  <div class='col-8 back-area'>
+<div *ngIf="entity">
+  <div class='jumbotron'>
     <div>
       <h2 style='margin: 10px'></h2>
       <h2>
         {{entity ? entity.name : 'Not loaded'}}
       </h2>
     </div>
-  </div>
-  <div class="col-4 jumbotron">
     <div>
       Default Price: {{defaultPrice}} {{defaultMoneyType?.code}} / {{defaultUnit}}
     </div>
