--- a/apps/money-tracker-ui/src/app/organizations/organization-group/organization-group.component.html
+++ b/apps/money-tracker-ui/src/app/organizations/organization-group/organization-group.component.html
@@ -1,17 +1,14 @@
-<div class='row'>
-
-  <div class='col-4 back-area jumbotron' style="min-width: 350px;">
-    <div>
+<app-breadcrumbs *ngIf="entity" [path]="path"></app-breadcrumbs>
+<div *ngIf="entity">
+  <div class='back-area'>
+    <div class="jumbotron">
       <h2 style='margin: 10px'></h2>
       <h2>
         {{entity ? entity.name : ''}}
       </h2>
-      <h6>
-        <a routerLink="{{parentLink}}">{{parent?.name}}</a>
-      </h6>
-    </div>
-    <div style='max-height: 350px; margin: 10px; overflow: auto'>
-      {{entity ? entity.description : ''}}
+      <span style='max-height: 350px; margin: 10px; overflow: auto'>
+          {{entity ? entity.description : ''}}
+        </span>
     </div>
   </div>
 
@@ -26,11 +23,8 @@
       <app-entity-element [entity]="a"></app-entity-element>
     </div>
   </div>
-</div>
 
-<div class="row">
-
-  <div class="col-12">
+  <div>
     <ya-map [center]="[55.751952, 37.600739]" [zoom]="12">
       <ya-placemark [geometry]="[55.751952, 37.600739]"></ya-placemark>
     </ya-map>
