[+] Added graphs for the main page accounts stats

--- a/apps/money-tracker-ui/src/app/main/main.component.html
+++ b/apps/money-tracker-ui/src/app/main/main.component.html
@@ -1,3 +1,5 @@
-<div *ngFor="let a of accountsBalances">
-  <app-account-balance-item [balance]="a" *ngIf="a.balance != 0"></app-account-balance-item>
-</div>
+<div echarts [options]="optionsRub" class="accounts-chart"></div>
+
+<div echarts [options]="optionsEur" class="accounts-chart"></div>
+
+<div echarts [options]="optionsUsd" class="accounts-chart"></div>
