[+] Removed old components

--- a/apps/money-tracker-ui/src/app/main/main.component.css
+++ b/apps/money-tracker-ui/src/app/main/main.component.css
@@ -4,3 +4,9 @@
   overflow: hidden;
   margin-top: 20px;
 }
+
+.accounts-chart-small {
+  position: relative;
+  overflow: hidden;
+  margin-top: 20px;
+}
