--- a/apps/money-tracker-ui/src/app/main/main.component.html
+++ b/apps/money-tracker-ui/src/app/main/main.component.html
@@ -1,5 +1,5 @@
 <div echarts [options]="optionsRub" class="accounts-chart"></div>
 
-<div echarts [options]="optionsEur" class="accounts-chart"></div>
+<div echarts [options]="optionsEur" class="accounts-chart-small"></div>
 
-<div echarts [options]="optionsUsd" class="accounts-chart"></div>
+<div echarts [options]="optionsUsd" class="accounts-chart-small"></div>
