[+] Added waterfall chart

--- a/apps/money-tracker-ui/src/app/header/header.component.html
+++ b/apps/money-tracker-ui/src/app/header/header.component.html
@@ -11,19 +11,19 @@
            routerLinkActive="/main"
            routerLink="/main">Home</a>
         <a mat-list-item
-           routerLinkActive="/commodities"
+           routerLinkActive="active-link"
            routerLink="/commodities">Commodities</a>
         <a mat-list-item
-           routerLinkActive="/commodityGroups"
+           routerLinkActive="active-link"
            routerLink="/commodityGroups">Commodities Groups</a>
         <a mat-list-item
-           routerLinkActive="/organizations"
+           routerLinkActive="active-link"
            routerLink="/organizations">Organizations</a>
         <a mat-list-item
-           routerLinkActive="/organizationGroups"
+           routerLinkActive="active-link"
            routerLink="/organizationGroups">Organizations Groups</a>
         <a mat-list-item
-           routerLinkActive="/expenses"
+           routerLinkActive="active-link"
            routerLink="/expenses">Expenses</a>
       </div>
       <a mat-list-item
