--- a/apps/money-tracker-ui/src/app/main/main.component.html
+++ b/apps/money-tracker-ui/src/app/main/main.component.html
@@ -1,5 +1,19 @@
+<mat-paginator [length]="total"
+               [pageSize]="limit"
+               [pageSizeOptions]="[12, 24, 36, 48, 120, 240]"
+               [pageIndex]="n"
+               (page)="setCurrentPage($event)"
+               aria-label="Select page">
+</mat-paginator>
+<div echarts [options]="waterfall" class="waterfall"></div>
+
 <div echarts [options]="optionsRub" class="accounts-chart"></div>
 
-<div echarts [options]="optionsEur" class="accounts-chart-small"></div>
-
-<div echarts [options]="optionsUsd" class="accounts-chart-small"></div>
+<mat-grid-list cols="2">
+  <mat-grid-tile>
+    <div echarts [options]="optionsEur" class="accounts-chart-small"></div>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <div echarts [options]="optionsUsd" class="accounts-chart-small"></div>
+  </mat-grid-tile>
+</mat-grid-list>
