--- a/apps/money-tracker-ui/src/app/main/main.component.css
+++ b/apps/money-tracker-ui/src/app/main/main.component.css
@@ -1,3 +1,10 @@
+.waterfall {
+  position: relative;
+  height: 50vh;
+  overflow: hidden;
+  margin-top: 20px;
+}
+
 .accounts-chart {
   position: relative;
   height: 100vh;
@@ -9,4 +16,5 @@
   position: relative;
   overflow: hidden;
   margin-top: 20px;
+  width: 100%;
 }
