[+] Added accounts page [-] Fixed path

--- a/apps/money-tracker-ui/src/app/header/header.component.html
+++ b/apps/money-tracker-ui/src/app/header/header.component.html
@@ -11,6 +11,9 @@
            routerLinkActive="/main"
            routerLink="/main">Home</a>
         <a mat-list-item
+           routerLinkActive="/accounts"
+           routerLink="/accounts">Accounts</a>
+        <a mat-list-item
            routerLinkActive="active-link"
            routerLink="/commodities">Commodities</a>
         <a mat-list-item
