[+] Added last commodities table

--- a/apps/money-tracker-ui/src/app/header/header.component.html
+++ b/apps/money-tracker-ui/src/app/header/header.component.html
@@ -21,6 +21,9 @@
            routerLink="/commodityGroups">Commodities Groups</a>
         <a mat-list-item
            routerLinkActive="active-link"
+           routerLink="/lastCommodities">Last Commodities</a>
+        <a mat-list-item
+           routerLinkActive="active-link"
            routerLink="/organizations">Organizations</a>
         <a mat-list-item
            routerLinkActive="active-link"
